# EstruturaDeDados

./: .cproject  .project  CMakeLists.txt  README.md  main.cpp
lib/: binaryTree.cpp  binaryTree.h  calculator.h  heap.cpp  heap.h  ktree.cpp  ktree.h  linkedList.cpp  linkedList.h  stack.cpp  stack.h
src/: main.c
src/lib/: binaryTree.c  binaryTree.h  calculator.c  calculator.h  heap.c  heap.h  ktree.c  linkedList  linkedList.c  linkedList.h  list  list.c  stack.c  stack.h  strFuncs.c  strFuncs.h
